--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 ext {
     // supportLibVersion variable that can be referenced to keep support libs consistent
     supportLibVersion = '27.0.1'
@@ -35,8 +36,7 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+
     }
 
     packagingOptions {
@@ -47,29 +47,29 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile "com.android.support:design:${supportLibVersion}"
-    compile "com.android.support:cardview-v7:${supportLibVersion}"
-    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
-    compile "com.android.support:appcompat-v7:${supportLibVersion}"
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'com.google.guava:guava:20.0'
-    compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:multidex:1.0.2'
-    compile 'com.squareup.okhttp:okhttp:2.5.0'
-    compile "com.google.android.gms:play-services-maps:${gmsLibVersion}"
-    compile "com.google.android.gms:play-services-location:${gmsLibVersion}"
-    compile "com.google.android.gms:play-services-places:${gmsLibVersion}"
-    compile "com.google.firebase:firebase-messaging:${gmsLibVersion}"
+    implementation "com.android.support:design:${supportLibVersion}"
+    implementation "com.android.support:cardview-v7:${supportLibVersion}"
+    implementation "com.android.support:recyclerview-v7:${supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${supportLibVersion}"
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'com.google.guava:guava:20.0'
+    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.support:multidex:1.0.2'
+    implementation 'com.squareup.okhttp:okhttp:2.5.0'
+    implementation "com.google.android.gms:play-services-maps:${gmsLibVersion}"
+    implementation "com.google.android.gms:play-services-location:${gmsLibVersion}"
+    implementation "com.google.android.gms:play-services-places:${gmsLibVersion}"
+    implementation "com.google.firebase:firebase-messaging:${gmsLibVersion}"
     // https://mvnrepository.com/artifact/javax.mail/mail
-    compile group: 'javax.mail', name: 'mail', version: '1.4.1'
-    testCompile 'junit:junit:4.12'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation group: 'javax.mail', name: 'mail', version: '1.4.1'
+    testImplementation 'junit:junit:4.12'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
 repositories {
     mavenCentral()
